Just a test: return immediately without remote URL call.

--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
  <dl><dt><a name="-search"><strong>search</strong></a>(args)</dt><dd><tt>The&nbsp;<a href="#-search">search</a>(args)&nbsp;function&nbsp;implements&nbsp;the&nbsp;/search&nbsp;endpoint&nbsp;of&nbsp;the&nbsp;web&nbsp;service.<br>
 The&nbsp;args&nbsp;are&nbsp;taken&nbsp;from&nbsp;the&nbsp;URL&nbsp;of&nbsp;an&nbsp;HTTP&nbsp;GET.<br>
 Call&nbsp;the&nbsp;remote&nbsp;service.<br>
+On&nbsp;error,&nbsp;raise&nbsp;HTTPError&nbsp;exception.<br>
 On&nbsp;success,&nbsp;print&nbsp;the&nbsp;JSON&nbsp;payload&nbsp;to&nbsp;STDOUT.</tt></dd></dl>
 </td></tr></table><p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
